--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     font-family: sans-serif;
     display: flex;
@@ -7,4 +12,11 @@ body{
     font-size: 120px;
     text-align: center;
     font-weight: bold;
+}
+
+.madeby{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 16px;
 }
